<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddEventActivity"
    >
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/add_event_toolbar"
            style="@style/AppToolbar" />
        <TextView
            style="@style/AddEventLabel"
            android:text="@string/add_event_type"
            />

        <Spinner
            style="@style/AddEventSpinner"
            android:id="@+id/type"
            />

        <TextView
            style="@style/AddEventLabel"
            android:text="@string/add_event_name"
            />
        <TextView
            style="@style/AddEventSublabel"
            android:text="@string/add_event_name_help"
            />
        <EditText
            style="@style/AddEventEditText"
            android:id="@+id/name"
            />

        <TextView
            style="@style/AddEventLabel"
            android:text="@string/add_event_description"
            />
        <EditText
            style="@style/AddEventEditText"
            android:id="@+id/description"
            android:minLines="2"
            android:maxLines="10"
            />

        <TextView
            style="@style/AddEventLabel"
            android:text="@string/add_event_website"
            />
        <TextView
            style="@style/AddEventSublabel"
            android:text="@string/add_event_website_help"
            />
        <EditText
            style="@style/AddEventEditText"
            android:inputType="textUri"
            android:id="@+id/website"
            />

        <TextView
            style="@style/AddEventLabel"
            android:text="@string/add_event_start_date"
            />
        <EditText
            style="@style/AddEventEditText"
            android:id="@+id/start_date"
            />

        <TextView
            style="@style/AddEventLabel"
            android:text="@string/add_event_end_date"
            />
        <EditText
            style="@style/AddEventEditText"
            android:id="@+id/end_date"
            />

        <Button
            style="@style/AddEventButton"
            android:text="@string/add_event_pick_place"
            android:id="@+id/pick_place"
            />
        <TextView
            style="@style/AddEventPlaceText"
            android:text="@string/add_event_no_place_selected"
            android:id="@+id/picked_place_address"
            />

        <Button
            style="@style/AddEventButton"
            android:text="@string/add_event_submit"
            android:id="@+id/submit"
            />
    </LinearLayout>
</ScrollView>
